--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,20 +1,3 @@
-<!-- <div class="test-name-table" style="margin-top: 20px;border-bottom: solid 1px grey;height: 30px;">
-    <div style="width: 33%;text-align: center; font-size: 20px;   font-weight: bold;color: #324395;margin-left: 20px;">
-        NAME</div>
-    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 50px;">
-        RATIONALE</div>
-    <div style="width: 33%;text-align: center; font-size: 20px;  font-weight: bold;color: #324395;margin-left: 20px;">
-        RATING</div>
-
-        <div *ngFor="let columnName of columnsNamesHeader" style="width: 33%;text-align: center;margin-left: 10px;">
-
-            <div >{{columnName}}</div>
-
-        </div>
-
-</div>
-<hr> -->
-
 <!-- CONFIG BOX -->
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4">
     <div style="text-align: center;">
@@ -48,12 +31,14 @@
 </div>
 
 
-<!-- RATING TABLE -->
+<!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 <div class="odd-style" *ngFor="let testName of bmxItem.componentText; let y = index">
     <div class="test-name-table">
         <div *ngFor="let columnName of columnsNames" style="width: 33%;text-align: start;margin:10px 10px;">
-            <div *ngIf="(y === 0)">{{testName[columnName]}}</div>
+            <!-- <div *ngIf="(y === 0)">{{testName[columnName]}}</div> -->
+            <input *ngIf="(y == 0)" [(ngModel)]="testName[columnName]" style=" font-size: 15px;font-weight: bold;color: #324395;border: none;" value="testName[columnName]">
             <input *ngIf="(y !== 0)" [(ngModel)]="testName[columnName]" style="border: none;" value="testName[columnName]">
+            <!-- <input  [(ngModel)]="testName[columnName]" style="border: none;" value="testName[columnName]"> -->
         </div>
         <div style="min-width: 250px">
             <button *ngFor="let star of  testName.STARS; let x =  index" (click)="setRating(star.id,y)" [ngClass]="star.class"
