--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -5,9 +5,6 @@
     color: grey;
 }
 
-// .odd-style::-webkit-scrollbar {
-//     display: none;
-// }
 .odd-style::-webkit-scrollbar {
     width: 3px;
 }
@@ -25,11 +22,8 @@
 
 /* Handle on hover */
 .odd-style::-webkit-scrollbar-thumb:hover {
-     background: #b30000; 
+    background: #b30000;
 }
-
-
-
 
 .rating-text {
     width: 33%;
@@ -39,4 +33,35 @@
     font-weight: bold;
     color: #324395;
     margin-bottom: 20px;
+}
+
+.header-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.header-delete-icon {
+    cursor: pointer;
+    margin-right: 5px;
+    color: red;
+    font-size: 20px;
+}
+
+.header-title-box {
+    font-weight: bold;
+    color: #324395;
+    border: none;
+    max-width: 300px;
+}
+
+.row-box {
+    border: none;
+    max-width: 300px;
+}
+
+.add-column {
+    outline: none;
+    margin: -20px 29px;
+    float: right;
 }
