director details implemented/localStorage in progress

--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -99,7 +99,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <!-- <button mat-button color="primary" (click)="saveData()">Save</button> -->
+            <button mat-button color="primary" (click)="saveData()">Save</button>
         </div>
 
     </div>
