--- a/src/app/elite/elite-venue/elite-venue.component.html
+++ b/src/app/elite/elite-venue/elite-venue.component.html
@@ -1,1 +1,102 @@
-<p>elite-venue works!</p>
+<div class="mainContainer disable-dbl-tap-zoom">
+
+    <div class="logo-miami">
+        <img class="logo" src="./assets/img/elite/logo.png">
+        <p style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;">{{title}}</p><br>
+    </div>
+
+    <div class="menu">
+        <!-- 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ Venue INFO 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ -->
+        <form *ngIf="true" name="loginForm" novalidate class=""
+            style="background: white; display: flex;flex-direction: column;margin:20% 20px;padding: 20px;border-radius: 5px;">
+            <!-- <h1 style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;color: red;text-align: center;">
+     Please provide your info to get promotion
+  </h1> -->
+            <br>
+            <h2 style="color: black;text-align: center;">Business Info</h2>
+
+            <mat-form-field appearance="outline">
+                <mat-label>NAME</mat-label>
+                <input matInput type="text" placeholder="Name" [(ngModel)]="VenueName"
+                    [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>EMAIL</mat-label>
+                <input matInput type="email" placeholder="Email" [(ngModel)]="VenueEmail"
+                    [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>PAYMENT</mat-label>
+                <input matInput type="email" placeholder="Payemnt Type" [(ngModel)]="VenuePayment"
+                    [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+                <mat-label>BALANCE</mat-label>
+                <input matInput type="email" placeholder="Balance" [(ngModel)]="VenueBalance"
+                    [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+           
+            <mat-form-field appearance="outline">
+                <mat-label>PHONE</mat-label>
+                <input matInput type="tel" placeholder="3050058555" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                    [(ngModel)]="VenuePhone" [ngModelOptions]="{standalone: true}">
+            </mat-form-field>
+
+            <button *ngIf="(VenueName.length > 0) && (VenueEmail.length > 0) && (VenuePhone.length > 0) "
+                (click)="isVenueInfoReady()" mat-raised-button style="color: white;" color="primary"
+                class="submit-button" aria-label="LOG IN">
+                SUBMIT
+            </button>
+
+        </form>
+        <!-- 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ END Venue INFO 🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️🤷🏻‍♂️ -->
+
+        <div #canvas></div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
+
+    <div class="footer">
+        <!-- <button mat-mini-fab color="warn"
+            style="color: white;outline: none;position: absolute;bottom: 19px; left: 80px;background-color: goldenrod;">
+            <mat-icon style="line-height: 18px;" (click)="qrcode()">qr_code</mat-icon>
+        </button> -->
+        <button mat-mini-fab color="primary" style="color: white;
+        background-color: black;
+        font-size: 6px;
+        bottom: 30px;
+        width: 60px;
+        height: 60px;" (click)="qrcode()">
+            <mat-icon>qr_code</mat-icon>
+        </button>
+        <!-- <button mat-mini-fab
+            style="background-color: goldenrod; color: white;outline: none;position: absolute;bottom: 19px; right: 80px;">
+            <a style="color: white;" href="tel:3053220070">
+                <mat-icon>phone</mat-icon>
+            </a>
+        </button> -->
+    </div>
+
+    <!-- MODAL REVIEW -->
+    <div *ngIf="popUpQRCode" class="formFieldValidationAlert" style="background: black;border: black 1px solid;">
+        <h1 style="color: white;">OPEN YOUR APP</h1>
+        <!-- <qrcode [qrdata]="myAngularxQrCode" [width]="140" [errorCorrectionLevel]="'M'"></qrcode> -->
+        <img class="logo" style="width: 360px" src="./assets/img/elite/Promoters/PromoterQrCode.png">
+        <!-- REGISTARTION FORM -->
+        <!-- <img class="logo" style="width: 360px;background: white;" src="./assets/img/elite/CesarVega/CesarRecruiter.png"> -->
+        <!-- <p><a style="color: rgb(255, 255, 255);" target="_blank">{{myAngularxQrCode}}</a></p> -->
+        <button mat-mini-fab color="primary"
+            style="color:white;background-color: green;font-size: 6px;margin-bottom: 10px;"
+            (click)="dismissErrorForm()">
+            <mat-icon>check</mat-icon>
+        </button>
+    </div>
+
+</div>
